feat: update delivery status route works
