# src/main/java/com/futuereh/dronefeeder/controller/DeliveryController.java
@@ -1,15 +1,19 @@
 package com.futuereh.dronefeeder.controller;
 
 import com.futuereh.dronefeeder.dto.DeliveryDto;
+import com.futuereh.dronefeeder.dto.UpdateDeliveryStatusDto;
 import com.futuereh.dronefeeder.entity.Delivery;
 import com.futuereh.dronefeeder.entity.DeliveryVideo;
 import com.futuereh.dronefeeder.service.DeliveryService;
 import java.util.List;
+
+import com.futuereh.dronefeeder.utils.DeliveryStatus;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -35,6 +39,16 @@ public class DeliveryController {
   @GetMapping("/{id}")
   public ResponseEntity<Delivery> getDelivery(@PathVariable("id") Integer deliveryId) {
     return ResponseEntity.ok(deliveryService.getDelivery(deliveryId));
+  }
+
+  @PutMapping("/{id}")
+  public ResponseEntity updateDeliveryStatus(@PathVariable("id") Integer deliveryId,
+                                                 @RequestBody UpdateDeliveryStatusDto updateDeliveryStatusDto) {
+    try{
+      return ResponseEntity.ok(deliveryService.updateDeliveryStatus(deliveryId, updateDeliveryStatusDto));
+    } catch (Exception e) {
+      return ResponseEntity.status(400).body("Invalid status");
+    }
   }
 
   @GetMapping("/links")
